# CPP

./: CMakeLists.txt
deliverables-student/: 0_FAQ.txt
deliverables-student/Testate/01_SMPL/: Errors.txt  main_simple.cpp  main_smpl
deliverables-student/Testate/01_TOOL/: polynom1.h  polynom3.cpp
deliverables-student/Testate/02_FLOW_a/: a.out_mods  build_a.sh  mods03.cpp
deliverables-student/Testate/03_DATA_a/: DataVars.h  z_build.sh
deliverables-student/Testate/03_DATA_b/: main_03_DATA.cpp  main_colors.cpp
src/01a_SMPL/: main_simple.cpp  main_smpl
src/01b_TOOL/: compile.sh  main  main.cpp  polynom2.cpp  polynom3.cpp
src/02a_FLOW_basic/: a.out_mods02  a.out_mods04  build.sh  build_a_old.sh  mods  mods.cpp  mods01  mods01.cpp  mods02  mods02.cpp  mods03  mods03.cpp  mods04  mods04.cpp  mods05.cpp
src/02b_FLOW_intr/: ISR_SMPL.cpp  build_b_d.sh  main_03_FLOW_b.cpp  main_03_FLOW_d.cpp
src/03_DATA_a/: DataVars  DataVars.cpp
src/03_DATA_b/: build.sh
src/03a_DATA/: DataVars.h  z_build.sh
src/03b_DATA/: build.sh  main_03_DATA  main_03_DATA.cpp  main_colors
src/04a_UDEF/: RationalNumber.cpp  RationalNumber.hpp  RgbColor  RgbColor.cpp  RgbColor.hpp  a.out_minmax_int  build_minmax.sh  build_rgb.sh  main_04_UDEF_minmax.cpp  main_rgbColor.cpp  out_minmax_all  out_minmax_double  out_minmax_int  out_minmax_rational  out_minmax_rgb
src/04b_VAL/: Byte  Byte.cpp  Byte.hpp  a.out_Byte  build.sh  main_byte.cpp
src/05_OOa/: build.sh  out_shapes  shapes.cpp  shapes.hpp  shapes_main.cpp
src/07_IO/: z_build.sh  z_log.hpp  z_match_main.cpp
(+166 files in other folders)
